# call_auomation_server

./: readme.md
IncomingCallHandler/: .gitignore  main.py  readme.md  requirements.txt
VoiceRAGAI/: .gitignore  README.md  pyproject.toml
VoiceRAGAI/app/backend/: app.py  logger.py  requirements.txt  rtmt.py  stream_decoder.py
VoiceRAGAI/app/backend/audio/: greet-user.pcm
